# SFML-PACMAN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run.ps1  install_msys2.ps1  main.cpp  map.cpp  map.h
src/: main.cpp  map.cpp  map.hpp
